-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9
-
None
-
f074d72c8f9354fcf941fe32a9279d9c68944456
When installing a file with qmake, the modification time of files are not preserved. Since the content of the files is not modified, the modification time stamp should also not change.
The QML caching uses the last modification time stamp to determine - among other things - whether the cache is up-to-date. When creating cache files ahead of time when building the application, it is important that the last modification time of the QML source files is retained.
While we could pass -p to the install command on Unix-alike platforms, we are missing an equivalent on Windows. Instead the idea is to implement this feature in qmake itself, similar to "qmake -install sed" and provide it across platforms.